--- a/data_analysis.ipynb
+++ b/data_analysis.ipynb
@@ -153,6 +153,7 @@
    "source": [
     "# Handling missing values\n",
     "airbnb_data.dropna(subset=['neighbourhood'], inplace=True)\n",
+    "airbnb_data.dropna(subset=['price'], inplace=True)\n",
     "\n",
     "# Removing currency symbols and converting 'price' to a numeric type\n",
     "airbnb_data['price'] = airbnb_data['price'].replace('[\\$,]', '', regex=True).astype(float)\n",
@@ -177,6 +178,168 @@
     "merged_data = pd.merge(airbnb_data, ny_zhvi_data, left_on='neighbourhood', right_on='RegionName', how='inner')\n",
     "merged_data.to_csv('cleaned_data.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9fb810b8",
+   "metadata": {},
+   "source": [
+    "##Analysis\n",
+    "\n",
+    "How does the prevalence of Airbnb listings correlate with the spatial distribution of housing prices across different neighborhoods in New York City? In the last 5 years?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "b3886dda",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>neighbourhood</th>\n",
+       "      <th>grouped_listings</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Arden Heights</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Arrochar</td>\n",
+       "      <td>51</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Astoria</td>\n",
+       "      <td>1871</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Bath Beach</td>\n",
+       "      <td>48</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Bay Ridge</td>\n",
+       "      <td>304</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>159</th>\n",
+       "      <td>Windsor Terrace</td>\n",
+       "      <td>330</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>160</th>\n",
+       "      <td>Woodhaven</td>\n",
+       "      <td>191</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>161</th>\n",
+       "      <td>Woodlawn</td>\n",
+       "      <td>29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>162</th>\n",
+       "      <td>Woodrow</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>163</th>\n",
+       "      <td>Woodside</td>\n",
+       "      <td>583</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>164 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       neighbourhood  grouped_listings\n",
+       "0      Arden Heights                 9\n",
+       "1           Arrochar                51\n",
+       "2            Astoria              1871\n",
+       "3         Bath Beach                48\n",
+       "4          Bay Ridge               304\n",
+       "..               ...               ...\n",
+       "159  Windsor Terrace               330\n",
+       "160        Woodhaven               191\n",
+       "161         Woodlawn                29\n",
+       "162          Woodrow                 3\n",
+       "163         Woodside               583\n",
+       "\n",
+       "[164 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#group by neighborhood size\n",
+    "# listings are depicted by density on map\n",
+    "# price\n",
+    "grouped_listings = merged_data.groupby('neighbourhood').size().reset_index(name='grouped_listings')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58b8ef9f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# take the average of all the date columns for past 5 years (1/31/2019 - )\n",
+    "\n",
+    "# calculate average price (in zillow dataset) for each neighbourhood\n",
+    "\n",
+    "\n",
+    "mean_price = grouped_listings.groupby('price').mean().reset_index(name='avereage price')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6be92339",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9006ef8d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -195,7 +358,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.1"
   }
  },
  "nbformat": 4,
