formatted data_cleaning, q1 and q2_q3 notebooks to black

--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -40,31 +40,39 @@
    ],
    "source": [
     "# Load Airbnb, ZHVI, and NYC geo-spatial datasets\n",
-    "airbnb_data = pd.read_csv('assets/Airbnb_Open_Data.csv', low_memory=False)\n",
-    "zhvi_data = pd.read_csv('assets/ZHVI_dataset.csv')\n",
-    "nyc_geo_data = gpd.read_file('assets/nyc_geo_export.shp')\n",
+    "airbnb_data = pd.read_csv(\"assets/Airbnb_Open_Data.csv\", low_memory=False)\n",
+    "zhvi_data = pd.read_csv(\"assets/ZHVI_dataset.csv\")\n",
+    "nyc_geo_data = gpd.read_file(\"assets/nyc_geo_export.shp\")\n",
     "\n",
     "# Original number of records\n",
     "airbnb_original_records = len(airbnb_data)\n",
     "zhvi_original_records = len(zhvi_data)\n",
     "\n",
     "# Drop rows with missing values in the 'neighbourhood' column\n",
-    "airbnb_data.dropna(subset=['neighbourhood'], inplace=True)\n",
+    "airbnb_data.dropna(subset=[\"neighbourhood\"], inplace=True)\n",
     "# Calculate difference in records after dropping missing values\n",
     "airbnb_dropped_records = airbnb_original_records - len(airbnb_data)\n",
-    "print(\"Airbnb data: Dropped {} records due to missing 'neighbourhood' values.\".format(airbnb_dropped_records))\n",
+    "print(\n",
+    "    \"Airbnb data: Dropped {} records due to missing 'neighbourhood' values.\".format(\n",
+    "        airbnb_dropped_records\n",
+    "    )\n",
+    ")\n",
     "\n",
     "# Remove dollar signs and commas from the 'price' column and convert it to float\n",
-    "airbnb_data['price'] = airbnb_data['price'].replace('[\\$,]', '', regex=True).astype(float)\n",
+    "airbnb_data[\"price\"] = airbnb_data[\"price\"].replace(\"[\\$,]\", \"\", regex=True).astype(float)\n",
     "\n",
     "# Convert 'last review' column to datetime format\n",
-    "airbnb_data['last review'] = pd.to_datetime(airbnb_data['last review'], errors='coerce')\n",
+    "airbnb_data[\"last review\"] = pd.to_datetime(airbnb_data[\"last review\"], errors=\"coerce\")\n",
     "\n",
     "# Keep only rows where the 'price' is greater than 0\n",
-    "airbnb_data = airbnb_data[airbnb_data['price'] > 0]\n",
+    "airbnb_data = airbnb_data[airbnb_data[\"price\"] > 0]\n",
     "# Calculate difference in records after filtering valid prices\n",
     "airbnb_price_filtered_records = airbnb_original_records - len(airbnb_data)\n",
-    "print(\"Airbnb data: Dropped {} records with price less than or equal to zero.\".format(airbnb_price_filtered_records))\n",
+    "print(\n",
+    "    \"Airbnb data: Dropped {} records with price less than or equal to zero.\".format(\n",
+    "        airbnb_price_filtered_records\n",
+    "    )\n",
+    ")\n",
     "\n",
     "# Remove duplicate records from Airbnb data\n",
     "airbnb_data.drop_duplicates(inplace=True)\n",
@@ -73,15 +81,22 @@
     "print(\"Airbnb data: Dropped {} duplicate records.\".format(airbnb_duplicates_dropped))\n",
     "\n",
     "# Drop unnecessary columns from Airbnb data\n",
-    "airbnb_columns_to_keep = ['id', 'neighbourhood', 'price', 'last review', 'number of reviews', 'availability 365']\n",
+    "airbnb_columns_to_keep = [\n",
+    "    \"id\",\n",
+    "    \"neighbourhood\",\n",
+    "    \"price\",\n",
+    "    \"last review\",\n",
+    "    \"number of reviews\",\n",
+    "    \"availability 365\",\n",
+    "]\n",
     "airbnb_data = airbnb_data[airbnb_columns_to_keep]\n",
     "\n",
     "#  Drop unnecessary columns from nyc_geo_data\n",
-    "geo_columns_to_keep = ['borough', 'name', 'geometry']\n",
+    "geo_columns_to_keep = [\"borough\", \"name\", \"geometry\"]\n",
     "nyc_geo_data = nyc_geo_data[geo_columns_to_keep]\n",
     "\n",
     "# Create a new DataFrame 'ny_zhvi_data' that contains only rows where the 'City' column is 'New York'\n",
-    "ny_zhvi_data = zhvi_data[zhvi_data['City'] == 'New York'].copy()\n",
+    "ny_zhvi_data = zhvi_data[zhvi_data[\"City\"] == \"New York\"].copy()\n",
     "zhvi_dropped_records = zhvi_original_records - len(ny_zhvi_data)\n",
     "print(\"ZHVI data: Filtered for New York City. Dropped {} records.\".format(zhvi_dropped_records))"
    ]
@@ -136,39 +151,41 @@
     "def find_discrepancies(source_names, target_names):\n",
     "    \"\"\"\n",
     "    Finds discrepancies between two sets of neighbourhood names.\n",
-    "    \n",
+    "\n",
     "    Args:\n",
     "        source_names (set): Set of names to compare.\n",
     "        target_names (set): Set of names to compare against.\n",
-    "        \n",
+    "\n",
     "    Returns:\n",
     "        list: List of names present in source_names but not in target_names.\n",
     "    \"\"\"\n",
     "    discrepancies = [value for value in source_names if value not in target_names]\n",
     "    return discrepancies\n",
     "\n",
+    "\n",
     "# Function to normalize neighbourhood names for consistency\n",
     "def normalize_names(names):\n",
     "    \"\"\"\n",
     "    Normalizes neighbourhood names for consistency.\n",
-    "    \n",
+    "\n",
     "    Args:\n",
     "        names (iterable): Iterable of names to be normalized.\n",
-    "        \n",
+    "\n",
     "    Returns:\n",
     "        set: Set of normalized names (lowercased and stripped of leading/trailing whitespace).\n",
     "    \"\"\"\n",
     "    return {name.strip().lower() for name in names}\n",
     "\n",
+    "\n",
     "# Function to find the best matching name for discrepancies using fuzzy matching\n",
     "def find_best_matches(discrepancies, target_names):\n",
     "    \"\"\"\n",
     "    Finds the best matching name for discrepancies using fuzzy matching.\n",
-    "    \n",
+    "\n",
     "    Args:\n",
     "        discrepancies (list): List of discrepancy names to be matched.\n",
     "        target_names (set): Set of names to search for matches.\n",
-    "        \n",
+    "\n",
     "    Returns:\n",
     "        dict: A dictionary where keys are original discrepancy names and values are their best matching names found in the reference set.\n",
     "    \"\"\"\n",
@@ -181,11 +198,11 @@
     "\n",
     "    # Iterate through each discrepancy name\n",
     "    for name in discrepancies:\n",
-    "        # Use the process.extractOne function to find one best match for the current discrepancy name \n",
+    "        # Use the process.extractOne function to find one best match for the current discrepancy name\n",
     "        # within the keys of the original_form dictionary\n",
     "        # The score_cutoff parameter ensures that only matches with a similarity score above 90 are considered\n",
     "        best_match = process.extractOne(name, original_form.keys(), score_cutoff=90)\n",
-    "        \n",
+    "\n",
     "        # If a best match is found  add it to the matches dictionary\n",
     "        if best_match:\n",
     "            # Store the original name corresponding to the best match in the matches dictionary\n",
@@ -194,10 +211,11 @@
     "    # Return the matches dictionary containing the best matches for discrepancies\n",
     "    return matches\n",
     "\n",
+    "\n",
     "# Normalize names in all datasets\n",
-    "airbnb_names = normalize_names(airbnb_data['neighbourhood'].unique())\n",
-    "zhvi_names = normalize_names(ny_zhvi_data['RegionName'].unique())\n",
-    "nyc_names = normalize_names(nyc_geo_data['name'].unique())\n",
+    "airbnb_names = normalize_names(airbnb_data[\"neighbourhood\"].unique())\n",
+    "zhvi_names = normalize_names(ny_zhvi_data[\"RegionName\"].unique())\n",
+    "nyc_names = normalize_names(nyc_geo_data[\"name\"].unique())\n",
     "\n",
     "# Identify discrepancies after initial normalization\n",
     "discrepancies_airbnb = find_discrepancies(airbnb_names, nyc_names)\n",
@@ -211,25 +229,33 @@
     "rename_map = {**matches_airbnb, **matches_zhvi}\n",
     "\n",
     "# Apply rename map to correct neighbourhood names\n",
-    "airbnb_data['neighbourhood'] = airbnb_data['neighbourhood'].apply(lambda x: rename_map.get(x.strip().lower(), x))\n",
-    "ny_zhvi_data['RegionName'] = ny_zhvi_data['RegionName'].apply(lambda x: rename_map.get(x.strip().lower(), x))\n",
+    "airbnb_data[\"neighbourhood\"] = airbnb_data[\"neighbourhood\"].apply(\n",
+    "    lambda x: rename_map.get(x.strip().lower(), x)\n",
+    ")\n",
+    "ny_zhvi_data[\"RegionName\"] = ny_zhvi_data[\"RegionName\"].apply(\n",
+    "    lambda x: rename_map.get(x.strip().lower(), x)\n",
+    ")\n",
     "\n",
     "# Re-identify unique neighbourhoods and discrepancies after name corrections\n",
-    "airbnb_names_updated = normalize_names(airbnb_data['neighbourhood'].unique())\n",
-    "zhvi_names_updated = normalize_names(ny_zhvi_data['RegionName'].unique())\n",
+    "airbnb_names_updated = normalize_names(airbnb_data[\"neighbourhood\"].unique())\n",
+    "zhvi_names_updated = normalize_names(ny_zhvi_data[\"RegionName\"].unique())\n",
     "\n",
     "discrepancies_airbnb_updated = find_discrepancies(airbnb_names_updated, nyc_names)\n",
     "discrepancies_zhvi_updated = find_discrepancies(zhvi_names_updated, nyc_names)\n",
     "\n",
-    "# Print the rename map \n",
+    "# Print the rename map\n",
     "print(\"Rename Map:\")\n",
     "for original_name, corrected_name in rename_map.items():\n",
     "    print(f\"Original: {original_name} -> Corrected: {corrected_name}\")\n",
     "\n",
     "# Output the number of discrepancies after standardizing names\n",
     "print(\"\\nDataset Discrepancies\")\n",
-    "print(f\"Initial Airbnb Discrepancies: {len(discrepancies_airbnb)} Updated: {len(discrepancies_airbnb_updated)}\")\n",
-    "print(f\"Initial ZHVI Discrepancies: {len(discrepancies_zhvi)} Updated: {len(discrepancies_zhvi_updated)}\")"
+    "print(\n",
+    "    f\"Initial Airbnb Discrepancies: {len(discrepancies_airbnb)} Updated: {len(discrepancies_airbnb_updated)}\"\n",
+    ")\n",
+    "print(\n",
+    "    f\"Initial ZHVI Discrepancies: {len(discrepancies_zhvi)} Updated: {len(discrepancies_zhvi_updated)}\"\n",
+    ")"
    ]
   },
   {
@@ -102927,18 +102953,17 @@
    ],
    "source": [
     "# Extract the year from the 'last review' column and create a new column 'last_review_year'\n",
-    "airbnb_data['last_review_year'] = airbnb_data['last review'].dt.year\n",
+    "airbnb_data[\"last_review_year\"] = airbnb_data[\"last review\"].dt.year\n",
     "\n",
-    "fig = px.histogram(airbnb_data, x='last_review_year',\n",
-    "                   title='Histogram of Reviews by Year',\n",
-    "                   labels={'last_review_year': 'Year', 'count': 'Number of Reviews'})\n",
-    "\n",
-    "\n",
-    "fig.update_layout(\n",
-    "    xaxis=dict(title='Year'),\n",
-    "    yaxis=dict(title='Number of Reviews'),\n",
-    "    showlegend=False\n",
+    "fig = px.histogram(\n",
+    "    airbnb_data,\n",
+    "    x=\"last_review_year\",\n",
+    "    title=\"Histogram of Reviews by Year\",\n",
+    "    labels={\"last_review_year\": \"Year\", \"count\": \"Number of Reviews\"},\n",
     ")\n",
+    "\n",
+    "\n",
+    "fig.update_layout(xaxis=dict(title=\"Year\"), yaxis=dict(title=\"Number of Reviews\"), showlegend=False)\n",
     "fig.show()\n",
     "\n",
     "# Define the valid year range\n",
@@ -102946,13 +102971,13 @@
     "\n",
     "# Filter the DataFrame to keep only rows with valid years\n",
     "airbnb_data_filtered = airbnb_data[\n",
-    "    (airbnb_data['last_review_year'] >= valid_year_range[0]) &\n",
-    "    (airbnb_data['last_review_year'] <= valid_year_range[1])\n",
+    "    (airbnb_data[\"last_review_year\"] >= valid_year_range[0])\n",
+    "    & (airbnb_data[\"last_review_year\"] <= valid_year_range[1])\n",
     "]\n",
     "\n",
-    "# Filter Zillow DataFrame for last 5 years \n",
-    "last_five_years = ny_zhvi_data.columns[-60:]  \n",
-    "zhvi_data_filtered = ny_zhvi_data[['RegionName'] + list(last_five_years)]"
+    "# Filter Zillow DataFrame for last 5 years\n",
+    "last_five_years = ny_zhvi_data.columns[-60:]\n",
+    "zhvi_data_filtered = ny_zhvi_data[[\"RegionName\"] + list(last_five_years)]"
    ]
   },
   {
@@ -103188,19 +103213,23 @@
    ],
    "source": [
     "# Merge Airbnb data with NYC Geo data\n",
-    "project_data = pd.merge(airbnb_data_filtered, nyc_geo_data, left_on='neighbourhood', right_on='name', how='inner') # how='inner' in both merges to keep only the common neighborhoods.\n",
+    "project_data = pd.merge(\n",
+    "    airbnb_data_filtered, nyc_geo_data, left_on=\"neighbourhood\", right_on=\"name\", how=\"inner\"\n",
+    ")  # how='inner' in both merges to keep only the common neighborhoods.\n",
     "\n",
     "# Drop redundant column 'name' from NYC Geo data\n",
-    "project_data.drop(['name'], axis=1, inplace=True)\n",
+    "project_data.drop([\"name\"], axis=1, inplace=True)\n",
     "\n",
     "# Merge with ZHVI data\n",
-    "project_data = pd.merge(project_data, zhvi_data_filtered, left_on='neighbourhood', right_on='RegionName', how='inner')\n",
+    "project_data = pd.merge(\n",
+    "    project_data, zhvi_data_filtered, left_on=\"neighbourhood\", right_on=\"RegionName\", how=\"inner\"\n",
+    ")\n",
     "\n",
     "# Drop redundant column 'RegionName' from ZHVI data\n",
-    "project_data.drop(['RegionName'], axis=1, inplace=True)\n",
+    "project_data.drop([\"RegionName\"], axis=1, inplace=True)\n",
     "\n",
     "# Drop rows where the price is 0 for any date\n",
-    "project_data = project_data.dropna(subset=[col for col in project_data.columns if '/' in col])\n",
+    "project_data = project_data.dropna(subset=[col for col in project_data.columns if \"/\" in col])\n",
     "\n",
     "# Reset index\n",
     "project_data.reset_index(drop=True, inplace=True)\n",
