added numbering to the cells to reference code in presentation

--- a/q2_q3_analysis.ipynb
+++ b/q2_q3_analysis.ipynb
@@ -185274,25 +185274,34 @@
    ],
    "source": [
     "# Extract year and month from last_review column\n",
-    "cleanup_with_borough['last review'] = pd.to_datetime(cleanup_with_borough['last review'])\n",
-    "cleanup_with_borough['year'] = cleanup_with_borough['last review'].dt.year\n",
-    "cleanup_with_borough['month'] = cleanup_with_borough['last review'].dt.month\n",
+    "cleanup_with_borough[\"last review\"] = pd.to_datetime(cleanup_with_borough[\"last review\"])\n",
+    "cleanup_with_borough[\"year\"] = cleanup_with_borough[\"last review\"].dt.year\n",
+    "cleanup_with_borough[\"month\"] = cleanup_with_borough[\"last review\"].dt.month\n",
     "\n",
     "# Calculate seasonal availability of Airbnb rentals for each neighborhood\n",
-    "seasonal_availability = cleanup_with_borough.groupby(['borough', 'year', 'month'])['availability 365'].mean().reset_index()\n",
+    "seasonal_availability = (\n",
+    "    cleanup_with_borough.groupby([\"borough\", \"year\", \"month\"])[\"availability 365\"]\n",
+    "    .mean()\n",
+    "    .reset_index()\n",
+    ")\n",
     "\n",
     "# Calculate seasonal averages across neighborhoods\n",
-    "seasonal_availability_avg = seasonal_availability.groupby(['borough', 'month'])['availability 365'].mean().reset_index()\n",
+    "seasonal_availability_avg = (\n",
+    "    seasonal_availability.groupby([\"borough\", \"month\"])[\"availability 365\"].mean().reset_index()\n",
+    ")\n",
     "\n",
     "# Plot seasonal availability trends across neighborhoods\n",
     "plt.figure(figsize=(12, 6))\n",
-    "sns.lineplot(x='month', y='availability 365', hue='borough', data=seasonal_availability_avg)\n",
-    "plt.title('Seasonal Availability of Airbnb Rentals Across Boroughs')\n",
-    "plt.xlabel('Month')\n",
-    "plt.ylabel('Average Availability (Days)')\n",
-    "plt.xticks(range(1, 13), ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec'])\n",
-    "plt.legend(title='Bourough', loc='upper left')\n",
-    "plt.show()\n"
+    "sns.lineplot(x=\"month\", y=\"availability 365\", hue=\"borough\", data=seasonal_availability_avg)\n",
+    "plt.title(\"Seasonal Availability of Airbnb Rentals Across Boroughs\")\n",
+    "plt.xlabel(\"Month\")\n",
+    "plt.ylabel(\"Average Availability (Days)\")\n",
+    "plt.xticks(\n",
+    "    range(1, 13),\n",
+    "    [\"Jan\", \"Feb\", \"Mar\", \"Apr\", \"May\", \"Jun\", \"Jul\", \"Aug\", \"Sep\", \"Oct\", \"Nov\", \"Dec\"],\n",
+    ")\n",
+    "plt.legend(title=\"Bourough\", loc=\"upper left\")\n",
+    "plt.show()"
    ]
   },
   {
@@ -185320,14 +185329,16 @@
    ],
    "source": [
     "# Housing price columns are '2019', '2020', '2021', '2022', '2023'\n",
-    "cleanup_with_borough['average_price'] = cleanup_with_borough[[2019, 2020, 2021, 2022, 2023]].mean(axis=1)\n",
+    "cleanup_with_borough[\"average_price\"] = cleanup_with_borough[[2019, 2020, 2021, 2022, 2023]].mean(\n",
+    "    axis=1\n",
+    ")\n",
     "\n",
     "# Plot housing price fluctuations over time across boroughs\n",
     "plt.figure(figsize=(12, 6))\n",
-    "sns.lineplot(x='borough', y='average_price', data=cleanup_with_borough)\n",
-    "plt.title('Housing Price Fluctuations Over Time Across Boroughs')\n",
-    "plt.xlabel('Bourough')\n",
-    "plt.ylabel('Average Price')\n",
+    "sns.lineplot(x=\"borough\", y=\"average_price\", data=cleanup_with_borough)\n",
+    "plt.title(\"Housing Price Fluctuations Over Time Across Boroughs\")\n",
+    "plt.xlabel(\"Bourough\")\n",
+    "plt.ylabel(\"Average Price\")\n",
     "plt.xticks(rotation=90)\n",
     "plt.tight_layout()\n",
     "plt.show()"
@@ -185357,10 +185368,12 @@
    ],
    "source": [
     "# Merge availability and housing price data\n",
-    "availability_price_merged = pd.merge(seasonal_availability_avg, cleanup_with_borough, left_on='borough', right_on='borough')\n",
+    "availability_price_merged = pd.merge(\n",
+    "    seasonal_availability_avg, cleanup_with_borough, left_on=\"borough\", right_on=\"borough\"\n",
+    ")\n",
     "\n",
     "# Calculate correlation\n",
-    "correlation = availability_price_merged[['availability 365_x', 'average_price']].corr()\n",
+    "correlation = availability_price_merged[[\"availability 365_x\", \"average_price\"]].corr()\n",
     "print(f\"Correlation between seasonal availability and housing prices: {correlation}\")"
    ]
   },
@@ -185383,10 +185396,10 @@
    "source": [
     "# Plot correlation heatmap\n",
     "plt.figure(figsize=(8, 6))\n",
-    "sns.heatmap(correlation, annot=True, cmap='coolwarm', fmt=\".2f\", annot_kws={\"size\": 12})\n",
-    "plt.title('Correlation Between Seasonal Availability and Housing Prices')\n",
-    "plt.xlabel('Variables')\n",
-    "plt.ylabel('Variables')\n",
+    "sns.heatmap(correlation, annot=True, cmap=\"coolwarm\", fmt=\".2f\", annot_kws={\"size\": 12})\n",
+    "plt.title(\"Correlation Between Seasonal Availability and Housing Prices\")\n",
+    "plt.xlabel(\"Variables\")\n",
+    "plt.ylabel(\"Variables\")\n",
     "plt.show()"
    ]
   },
