--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -4,27 +4,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data Loading and Cleaning"
+    "# 1. Install necessary packages"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip3 install pandas\n",
+    "!pip3 install geopandas\n",
+    "!pip3 install fuzzywuzzy\n",
+    "!pip3 install plotly"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2. Import packages"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import geopandas as gpd\n",
     "from fuzzywuzzy import process\n",
-    "import geopandas as gpd\n",
-    "import plotly.express as px\n",
-    "import missingno as msno\n",
-    "import matplotlib.pyplot as plt"
+    "import plotly.express as px"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Loading and Cleaning"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +57,7 @@
       "Airbnb data: Dropped 16 records due to missing 'neighbourhood' values.\n",
       "Airbnb data: Dropped 262 records with price less than or equal to zero.\n",
       "Airbnb data: Dropped 803 duplicate records.\n",
-      "Airbnb data: Dropped 16613 records where the year is greater than 24.\n",
+      "Airbnb data: Dropped 16613 records where the year is greater than 2024.\n",
       "ZHVI data: Filtered for New York City. Dropped 21475 records.\n"
      ]
     }
@@ -85,7 +108,11 @@
     "airbnb_data = airbnb_data[airbnb_data[\"last review\"].dt.year <= 2024]\n",
     "# Calculate difference in records after this operation\n",
     "airbnb_years_filtered = airbnb_original_records - len(airbnb_data)\n",
-    "print(\"Airbnb data: Dropped {} records where the year is greater than 2024.\".format(airbnb_years_filtered))\n",
+    "print(\n",
+    "    \"Airbnb data: Dropped {} records where the year is greater than 2024.\".format(\n",
+    "        airbnb_years_filtered\n",
+    "    )\n",
+    ")\n",
     "\n",
     "# Drop unnecessary columns from Airbnb data\n",
     "airbnb_columns_to_keep = [\n",
@@ -94,6 +121,7 @@
     "    \"price\",\n",
     "    \"last review\",\n",
     "    \"number of reviews\",\n",
+    "    \"review rate number\",\n",
     "    \"availability 365\",\n",
     "]\n",
     "airbnb_data = airbnb_data[airbnb_columns_to_keep]\n",
@@ -119,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -127,23 +155,23 @@
      "output_type": "stream",
      "text": [
       "Rename Map:\n",
-      "Original: flushing -> Corrected: downtown flushing\n",
-      "Original: jamaica -> Corrected: jamaica estates\n",
-      "Original: chelsea, staten island -> Corrected: chelsea\n",
-      "Original: richmondtown -> Corrected: richmond town\n",
-      "Original: mariners harbor -> Corrected: mariner's harbor\n",
-      "Original: corona -> Corrected: north corona\n",
-      "Original: ditmars steinway -> Corrected: steinway\n",
       "Original: prospect-lefferts gardens -> Corrected: prospect lefferts gardens\n",
-      "Original: highbridge -> Corrected: high  bridge\n",
+      "Original: richmondtown -> Corrected: richmond town\n",
+      "Original: corona -> Corrected: north corona\n",
+      "Original: east morrisania -> Corrected: morrisania\n",
+      "Original: ditmars steinway -> Corrected: steinway\n",
+      "Original: mariners harbor -> Corrected: mariner's harbor\n",
       "Original: bedford-stuyvesant -> Corrected: bedford stuyvesant\n",
-      "Original: tremont -> Corrected: east tremont\n",
+      "Original: jamaica -> Corrected: jamaica estates\n",
+      "Original: harlem -> Corrected: central harlem\n",
+      "Original: bay terrace, staten island -> Corrected: bay terrace\n",
+      "Original: flushing -> Corrected: downtown flushing\n",
+      "Original: highbridge -> Corrected: high  bridge\n",
+      "Original: downtown brooklyn -> Corrected: downtown\n",
+      "Original: chelsea, staten island -> Corrected: chelsea\n",
       "Original: flatiron district -> Corrected: flatiron\n",
       "Original: bull's head -> Corrected: bulls head\n",
-      "Original: harlem -> Corrected: central harlem\n",
-      "Original: east morrisania -> Corrected: morrisania\n",
-      "Original: bay terrace, staten island -> Corrected: bay terrace\n",
-      "Original: downtown brooklyn -> Corrected: downtown\n",
+      "Original: tremont -> Corrected: east tremont\n",
       "Original: throggs neck -> Corrected: throgs neck\n",
       "Original: battery park -> Corrected: battery park city\n",
       "\n",
@@ -278,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -87172,26 +87200,16 @@
     ")\n",
     "\n",
     "# Find the year with the maximum number of reviews\n",
-    "max_year = airbnb_data['last_review_year'].mode()[0]\n",
-    "max_reviews = airbnb_data['last_review_year'].value_counts().max()\n",
+    "max_year = airbnb_data[\"last_review_year\"].mode()[0]\n",
+    "max_reviews = airbnb_data[\"last_review_year\"].value_counts().max()\n",
     "\n",
     "# Add annotation for the maximum value\n",
     "fig.add_annotation(\n",
-    "    x=max_year,\n",
-    "    y=max_reviews,\n",
-    "    text=f'Max: {max_reviews}',\n",
-    "    showarrow=True,\n",
-    "    arrowhead=1,\n",
-    "    ax=0,\n",
-    "    ay=-40\n",
+    "    x=max_year, y=max_reviews, text=f\"Max: {max_reviews}\", showarrow=True, arrowhead=1, ax=0, ay=-40\n",
     ")\n",
     "\n",
     "# Update layout\n",
-    "fig.update_layout(\n",
-    "    xaxis=dict(title=\"Year\"),\n",
-    "    yaxis=dict(title=\"Number of Reviews\"),\n",
-    "    showlegend=False\n",
-    ")\n",
+    "fig.update_layout(xaxis=dict(title=\"Year\"), yaxis=dict(title=\"Number of Reviews\"), showlegend=False)\n",
     "\n",
     "# Show the plot\n",
     "fig.show()\n",
@@ -87224,223 +87242,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>neighbourhood</th>\n",
-       "      <th>price</th>\n",
-       "      <th>last review</th>\n",
-       "      <th>number of reviews</th>\n",
-       "      <th>availability 365</th>\n",
-       "      <th>last_review_year</th>\n",
-       "      <th>borough</th>\n",
-       "      <th>geometry</th>\n",
-       "      <th>1/31/2019</th>\n",
-       "      <th>...</th>\n",
-       "      <th>3/31/2023</th>\n",
-       "      <th>4/30/2023</th>\n",
-       "      <th>5/31/2023</th>\n",
-       "      <th>6/30/2023</th>\n",
-       "      <th>7/31/2023</th>\n",
-       "      <th>8/31/2023</th>\n",
-       "      <th>9/30/2023</th>\n",
-       "      <th>10/31/2023</th>\n",
-       "      <th>11/30/2023</th>\n",
-       "      <th>12/31/2023</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1001254</td>\n",
-       "      <td>Kensington</td>\n",
-       "      <td>966.0</td>\n",
-       "      <td>2021-10-19</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>286.0</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>Brooklyn</td>\n",
-       "      <td>POINT (-73.98042 40.64238)</td>\n",
-       "      <td>705411.7989</td>\n",
-       "      <td>...</td>\n",
-       "      <td>684456.3353</td>\n",
-       "      <td>672106.3885</td>\n",
-       "      <td>668261.4733</td>\n",
-       "      <td>668539.7621</td>\n",
-       "      <td>669269.6315</td>\n",
-       "      <td>668423.4587</td>\n",
-       "      <td>664570.6277</td>\n",
-       "      <td>656191.0275</td>\n",
-       "      <td>649729.4505</td>\n",
-       "      <td>647670.1667</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1144382</td>\n",
-       "      <td>Kensington</td>\n",
-       "      <td>786.0</td>\n",
-       "      <td>2019-05-16</td>\n",
-       "      <td>45.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>Brooklyn</td>\n",
-       "      <td>POINT (-73.98042 40.64238)</td>\n",
-       "      <td>705411.7989</td>\n",
-       "      <td>...</td>\n",
-       "      <td>684456.3353</td>\n",
-       "      <td>672106.3885</td>\n",
-       "      <td>668261.4733</td>\n",
-       "      <td>668539.7621</td>\n",
-       "      <td>669269.6315</td>\n",
-       "      <td>668423.4587</td>\n",
-       "      <td>664570.6277</td>\n",
-       "      <td>656191.0275</td>\n",
-       "      <td>649729.4505</td>\n",
-       "      <td>647670.1667</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1221151</td>\n",
-       "      <td>Kensington</td>\n",
-       "      <td>779.0</td>\n",
-       "      <td>2019-05-19</td>\n",
-       "      <td>82.0</td>\n",
-       "      <td>131.0</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>Brooklyn</td>\n",
-       "      <td>POINT (-73.98042 40.64238)</td>\n",
-       "      <td>705411.7989</td>\n",
-       "      <td>...</td>\n",
-       "      <td>684456.3353</td>\n",
-       "      <td>672106.3885</td>\n",
-       "      <td>668261.4733</td>\n",
-       "      <td>668539.7621</td>\n",
-       "      <td>669269.6315</td>\n",
-       "      <td>668423.4587</td>\n",
-       "      <td>664570.6277</td>\n",
-       "      <td>656191.0275</td>\n",
-       "      <td>649729.4505</td>\n",
-       "      <td>647670.1667</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1409486</td>\n",
-       "      <td>Kensington</td>\n",
-       "      <td>422.0</td>\n",
-       "      <td>2019-01-21</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>181.0</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>Brooklyn</td>\n",
-       "      <td>POINT (-73.98042 40.64238)</td>\n",
-       "      <td>705411.7989</td>\n",
-       "      <td>...</td>\n",
-       "      <td>684456.3353</td>\n",
-       "      <td>672106.3885</td>\n",
-       "      <td>668261.4733</td>\n",
-       "      <td>668539.7621</td>\n",
-       "      <td>669269.6315</td>\n",
-       "      <td>668423.4587</td>\n",
-       "      <td>664570.6277</td>\n",
-       "      <td>656191.0275</td>\n",
-       "      <td>649729.4505</td>\n",
-       "      <td>647670.1667</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1487360</td>\n",
-       "      <td>Kensington</td>\n",
-       "      <td>887.0</td>\n",
-       "      <td>2019-01-02</td>\n",
-       "      <td>62.0</td>\n",
-       "      <td>115.0</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>Brooklyn</td>\n",
-       "      <td>POINT (-73.98042 40.64238)</td>\n",
-       "      <td>705411.7989</td>\n",
-       "      <td>...</td>\n",
-       "      <td>684456.3353</td>\n",
-       "      <td>672106.3885</td>\n",
-       "      <td>668261.4733</td>\n",
-       "      <td>668539.7621</td>\n",
-       "      <td>669269.6315</td>\n",
-       "      <td>668423.4587</td>\n",
-       "      <td>664570.6277</td>\n",
-       "      <td>656191.0275</td>\n",
-       "      <td>649729.4505</td>\n",
-       "      <td>647670.1667</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 69 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        id neighbourhood  price last review  number of reviews  \\\n",
-       "0  1001254    Kensington  966.0  2021-10-19                9.0   \n",
-       "1  1144382    Kensington  786.0  2019-05-16               45.0   \n",
-       "2  1221151    Kensington  779.0  2019-05-19               82.0   \n",
-       "3  1409486    Kensington  422.0  2019-01-21               20.0   \n",
-       "4  1487360    Kensington  887.0  2019-01-02               62.0   \n",
-       "\n",
-       "   availability 365  last_review_year   borough                    geometry  \\\n",
-       "0             286.0              2021  Brooklyn  POINT (-73.98042 40.64238)   \n",
-       "1               NaN              2019  Brooklyn  POINT (-73.98042 40.64238)   \n",
-       "2             131.0              2019  Brooklyn  POINT (-73.98042 40.64238)   \n",
-       "3             181.0              2019  Brooklyn  POINT (-73.98042 40.64238)   \n",
-       "4             115.0              2019  Brooklyn  POINT (-73.98042 40.64238)   \n",
-       "\n",
-       "     1/31/2019  ...    3/31/2023    4/30/2023    5/31/2023    6/30/2023  \\\n",
-       "0  705411.7989  ...  684456.3353  672106.3885  668261.4733  668539.7621   \n",
-       "1  705411.7989  ...  684456.3353  672106.3885  668261.4733  668539.7621   \n",
-       "2  705411.7989  ...  684456.3353  672106.3885  668261.4733  668539.7621   \n",
-       "3  705411.7989  ...  684456.3353  672106.3885  668261.4733  668539.7621   \n",
-       "4  705411.7989  ...  684456.3353  672106.3885  668261.4733  668539.7621   \n",
-       "\n",
-       "     7/31/2023    8/31/2023    9/30/2023   10/31/2023   11/30/2023  \\\n",
-       "0  669269.6315  668423.4587  664570.6277  656191.0275  649729.4505   \n",
-       "1  669269.6315  668423.4587  664570.6277  656191.0275  649729.4505   \n",
-       "2  669269.6315  668423.4587  664570.6277  656191.0275  649729.4505   \n",
-       "3  669269.6315  668423.4587  664570.6277  656191.0275  649729.4505   \n",
-       "4  669269.6315  668423.4587  664570.6277  656191.0275  649729.4505   \n",
-       "\n",
-       "    12/31/2023  \n",
-       "0  647670.1667  \n",
-       "1  647670.1667  \n",
-       "2  647670.1667  \n",
-       "3  647670.1667  \n",
-       "4  647670.1667  \n",
-       "\n",
-       "[5 rows x 69 columns]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Merge Airbnb data with NYC Geo data\n",
     "project_data = pd.merge(\n",
@@ -87466,6 +87270,13 @@
     "project_data.head()\n",
     "# project_data.to_csv('assets/project_data.csv', index = False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -87484,7 +87295,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.1"
   }
  },
  "nbformat": 4,
